feat: Add Signin component with routing, styles, and template; update Login routing

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -46,6 +46,7 @@
             </div>
 
             <div class="text-center mt-3">
+              <a href="#" class="small">Create new account</a>&nbsp; |
               <a href="#" class="small">Forgot password?</a>
             </div>
           </form>
