--- a/frontend/src/app/signin/signin.component.html
+++ b/frontend/src/app/signin/signin.component.html
@@ -17,28 +17,28 @@
               <label class="form-label">Email</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-mailbox"></i></span>
-                <input type="email" class="form-control">
+                <input type="email" class="form-control" placeholder="Enter Your Email">
               </div>
             </div>
             <div class="mb-3">
               <label class="form-label">Phone</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-phone"></i></span>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" placeholder="Enter Your Phone">
               </div>
             </div>
             <div class="mb-3">
               <label class="form-label">Username</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-person"></i></span>
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" placeholder="Enter Your Username">
               </div>
             </div>
             <div class="mb-3">
               <label class="form-label">Password</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-key"></i></span>
-                <input [type]="hidePassword?'password':'text'" class="form-control">
+                <input [type]="hidePassword?'password':'text'" class="form-control" placeholder="Enter Your Password">
                 <button type="button" class="btn btn-outline-secondary" (click)="hidePassword = !hidePassword"
                   [attr.aria-label]="hidePassword ? 'Show password' : 'Hide password'"><i class="bi"
                     [ngClass]="hidePassword ? 'bi-eye-slash' : 'bi-eye'"></i></button>
@@ -46,7 +46,7 @@
             </div>
             <div class="d-grid">
               <button class="btn btn-primary " type="submit">
-                <span class="spinner-border spinner-border-sm me-2" role="status"></span>
+                <!-- <span class="spinner-border spinner-border-sm me-2" role="status"></span> -->
                 Sign In
               </button>
             </div>
