--- a/frontend/src/app/signin/signin.component.html
+++ b/frontend/src/app/signin/signin.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="col-lg-6">
         <div class="card-form  p-md-5">
-          <form>
+          <form [formGroup]="registerForm">
             <div class="mb-3 text-center">
               <h3>Welcome</h3>
               <p class="text-muted small mb-0">Sign in to your account</p>
@@ -17,35 +17,36 @@
               <label class="form-label">Email</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-mailbox"></i></span>
-                <input type="email" class="form-control" placeholder="Enter Your Email">
+                <input type="email" class="form-control" placeholder="Enter Your Email" formControlName="email">
               </div>
             </div>
             <div class="mb-3">
               <label class="form-label">Phone</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-phone"></i></span>
-                <input type="text" class="form-control" placeholder="Enter Your Phone">
+                <input type="text" class="form-control" placeholder="Enter Your Phone" formControlName="phone">
               </div>
             </div>
             <div class="mb-3">
               <label class="form-label">Username</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-person"></i></span>
-                <input type="text" class="form-control" placeholder="Enter Your Username">
+                <input type="text" class="form-control" placeholder="Enter Your Username" formControlName="username">
               </div>
             </div>
             <div class="mb-3">
               <label class="form-label">Password</label>
               <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-key"></i></span>
-                <input [type]="hidePassword?'password':'text'" class="form-control" placeholder="Enter Your Password">
+                <input [type]="hidePassword?'password':'text'" class="form-control" placeholder="Enter Your Password"
+                  formControlName="password">
                 <button type="button" class="btn btn-outline-secondary" (click)="hidePassword = !hidePassword"
                   [attr.aria-label]="hidePassword ? 'Show password' : 'Hide password'"><i class="bi"
                     [ngClass]="hidePassword ? 'bi-eye-slash' : 'bi-eye'"></i></button>
               </div>
             </div>
             <div class="d-grid">
-              <button class="btn btn-primary " type="submit">
+              <button class="btn btn-primary " type="submit" (click)="validateForm()">
                 <!-- <span class="spinner-border spinner-border-sm me-2" role="status"></span> -->
                 Sign In
               </button>
